--- a/src/sass/_commons.scss
+++ b/src/sass/_commons.scss
@@ -24,25 +24,29 @@
     margin: 5px auto;
 }
 
+$scrollbar-color: #08090d;
+$scrollbar-color-thumb: lighten($color-primary, 5);
 .flexcroll {
-    scrollbar-face-color: #08090d;
-    scrollbar-shadow-color: #08090d;
-    scrollbar-highlight-color: #08090d;
-    scrollbar-3dlight-color: #08090d;
-    scrollbar-darkshadow-color: #08090d;
-    scrollbar-track-color: #08090d;
-    scrollbar-arrow-color: #08090d;
+    scrollbar-color:  $scrollbar-color-thumb #0f111a;
+
+    scrollbar-face-color: $scrollbar-color;
+    scrollbar-shadow-color: $scrollbar-color;
+    scrollbar-highlight-color: $scrollbar-color;
+    scrollbar-3dlight-color: $scrollbar-color;
+    scrollbar-darkshadow-color: $scrollbar-color;
+    scrollbar-track-color: $scrollbar-color;
+    scrollbar-arrow-color: $scrollbar-color;
+    
+    scrollbar-width: thin;
 
     &::-webkit-scrollbar {
-        width: 7px;
+        width: $scroll-bar-width;
     }
 
     &::-webkit-scrollbar-thumb {
         -webkit-border-radius: 0px;
         border-radius: 0px;
-        // background: #08090d;
-        background: lighten($color-primary, 5);
-        // -webkit-box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.5);
+        background: $scrollbar-color-thumb;
     }
 }
 
