--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -24,6 +24,8 @@ $boost-color : #5098eb;
 $favorite-color: #ffc16f;
 
 // Block dispositions
+$scroll-bar-width: 8px;
+
 $stream-selector-height: 30px;
 $stream-column-separator: 7px;
 $stream-column-width: 320px;
